setuptools/testmodule/include/example.h

#ifndef _EXAMPLE_H_
#define _EXAMPLE_H_

#include<stdint.h>

int c_int(int int_in);
char* c_str(char* str_in);
void c_ptr(uint64_t h, uint64_t w, double* arr_in, double* arr_out);

#endif // _EXAMPLE_H_